try another way to declare test-repo (resources/resources.yaml)

--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -13,3 +13,9 @@ resources:
     config-core:
       description: Team core for the config repo
       members: []
+  projects:
+    wazo-platform:
+      description: "Wazo Platform"
+      connection: github.com
+      source-repositories:
+        - wazo-pbx/test-repo
