--- a/nodepool/runC/_linters-packages.yaml
+++ b/nodepool/runC/_linters-packages.yaml
@@ -4,14 +4,9 @@
   set_fact:
     linters_pkgs:
       - yamllint
-      - bashate
-      - python-flake8
       - python-tox
       - traceroute
-      - rpm-build
-      - python2-pelican
-      - python2-sphinx
-      - doc8
+      - libpq-dev
 
 - name: Install linters packages
   yum:
