change name runc-centos to runc-debian

--- a/zuul.d/_jobs-base.yaml
+++ b/zuul.d/_jobs-base.yaml
@@ -17,7 +17,7 @@
     nodeset:
       nodes:
         - name: container
-          label: runc-centos
+          label: runc-debian
 
 - semaphore:
     name: semaphore-config-update
