--- a/nodepool/_local_hypervisor_runc.yaml
+++ b/nodepool/_local_hypervisor_runc.yaml
@@ -1,7 +1,7 @@
 # This file is managed by sfconfig, do not edit manually
 
 labels:
-  - name: runc-centos
+  - name: runc-debian
     min-ready: 2
 
 providers:
@@ -11,6 +11,6 @@ providers:
       - name: managesf.zuul.wazo.community
         max-servers: 10
         labels:
-          - name: runc-centos
+          - name: runc-debian
             username: zuul-worker
 
