nodepool/runC/debian-rootfs.yaml: wrap commands with bash -l to allow PATH to be correct

--- a/nodepool/runC/debian-rootfs.yaml
+++ b/nodepool/runC/debian-rootfs.yaml
@@ -14,8 +14,10 @@
     mkdir -p {{ target_dir }}
     tar -C {{ target_dir }} -xzf {{ target_dir }}-cache/$(python -c "import json; print(json.load(open('{{ target_dir }}-cache/manifest.json'))['layers'][0]['digest'].split(':')[1])")
     cp /etc/resolv.conf /srv/{{ debian_version }}/etc/resolv.conf
-    {{ bwrap_command }} apt-get update -y
-    {{ bwrap_command }} apt-get install -y openssh-server
+    {{ bwrap_command }} /bin/bash -lc "apt install -y --allow-unauthenticated gnupg2"
+    {{ bwrap_command }} /bin/bash -lc "rm -rf /var/lib/apt/lists/*"
+    {{ bwrap_command }} /bin/bash -lc "apt-get update -y"
+    {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server"
     rm -Rf {{ target_dir }}-cache
   args:
     creates: "{{ target_dir }}/sbin/sshd"
