--- a/nodepool/runC/customize.yaml
+++ b/nodepool/runC/customize.yaml
@@ -2,5 +2,5 @@
 - include_tasks: debian-rootfs.yaml
 
 # Tasks in that files are executed on the hypervisor-oci node by the config-update
-- include_tasks: _linters-packages.yaml
+#- include_tasks: _linters-packages.yaml
 
