--- a/nodepool/runC/debian-rootfs.yaml
+++ b/nodepool/runC/debian-rootfs.yaml
@@ -17,7 +17,8 @@
     {{ bwrap_command }} /bin/bash -lc "apt install -y --allow-unauthenticated gnupg2"
     {{ bwrap_command }} /bin/bash -lc "rm -rf /var/lib/apt/lists/*"
     {{ bwrap_command }} /bin/bash -lc "apt-get update -y"
-    {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server"
+    {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server rsync iproute git python3-pip traceroute"
+    {{ bwrap_command }} /bin/bash -lc "pip3 install tox"
     rm -Rf {{ target_dir }}-cache
   args:
     creates: "{{ target_dir }}/sbin/sshd"
