--- a/nodepool/runC/debian-rootfs.yaml
+++ b/nodepool/runC/debian-rootfs.yaml
@@ -15,7 +15,7 @@
     tar -C {{ target_dir }} -xzf {{ target_dir }}-cache/$(python -c "import json; print(json.load(open('{{ target_dir }}-cache/manifest.json'))['layers'][0]['digest'].split(':')[1])")
     cp /etc/resolv.conf /srv/{{ debian_version }}/etc/resolv.conf
     {{ bwrap_command }} /bin/bash -lc "apt install -y --allow-unauthenticated gnupg2"
-    {{ bwrap_command }} /bin/bash -lc "rm -rf /var/lib/apt/lists/*"
+    {{ bwrap_command }} /bin/bash -lc "rm -rf /var/lib/apt/lists/* /usr/share/dbus-1/system-services/org.freedesktop.systemd1.service.systemd"
     {{ bwrap_command }} /bin/bash -lc "apt-get update -y"
     {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server rsync iproute git python3-pip traceroute"
     {{ bwrap_command }} /bin/bash -lc "pip3 install tox"
