--- a/nodepool/runC/debian-rootfs.yaml
+++ b/nodepool/runC/debian-rootfs.yaml
@@ -17,7 +17,7 @@
     {{ bwrap_command }} /bin/bash -lc "apt install -y --allow-unauthenticated gnupg2"
     {{ bwrap_command }} /bin/bash -lc "rm -rf /var/lib/apt/lists/* /usr/share/dbus-1/system-services/org.freedesktop.systemd1.service.systemd"
     {{ bwrap_command }} /bin/bash -lc "apt-get update -y"
-    {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server rsync iproute git python3-pip traceroute"
+    {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server rsync iproute git python3-pip traceroute libpq-dev"
     {{ bwrap_command }} /bin/bash -lc "pip3 install tox"
     rm -Rf {{ target_dir }}-cache
   args:
