Add branch protection

--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -18,4 +18,5 @@ resources:
       description: "Wazo Platform"
       connection: github.com
       source-repositories:
-        - wazo-pbx/test-repo
+        - wazo-pbx/test-repo:
+	    zuul/exclude-unprotected-branches: true
