Revert "Add branch protection"
This reverts commit a143ca93c5541ff8f035179c3ff966107e3fc403.

--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -18,5 +18,4 @@ resources:
       description: "Wazo Platform"
       connection: github.com
       source-repositories:
-        - wazo-pbx/test-repo:
-	    zuul/exclude-unprotected-branches: true
+        - wazo-pbx/test-repo
