--- a/nodepool/runC/debian-rootfs.yaml
+++ b/nodepool/runC/debian-rootfs.yaml
@@ -19,6 +19,7 @@
     {{ bwrap_command }} /bin/bash -lc "apt-get update -y"
     {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server rsync iproute git python3-pip traceroute libpq-dev"
     {{ bwrap_command }} /bin/bash -lc "pip3 install tox"
+    {{ bwrap_command }} /bin/bash -lc "ln -s /usr/sbin/sshd /sbin/sshd"
     rm -Rf {{ target_dir }}-cache
   args:
     creates: "{{ target_dir }}/sbin/sshd"
@@ -46,7 +47,7 @@
 
 - name: Adds ssh key
   copy:
-    src: /var/lib/software-factory/bootstrap-data/ssh_keys/zuul_rsa.pub
+    src: /var/lib/software-factory/bootstrap-data/ssh_keys/zuul_worker_rsa.pub
     dest: "{{ target_dir }}/home/zuul-worker/.ssh/authorized_keys"
     owner: zuul-worker
 
