--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -29,3 +29,14 @@
 #          - name: dib-centos-7
 #            min-ram: 1024
 #            diskimage: dib-centos-7
+
+extra-labels:
+  - provider: openstack
+    pool: main
+    cloud-images:
+      - name: a992d22d-fbb8-49a8-9282-46e9d75a7fa1
+    labels:
+      - name: debian9-vm
+        cloud-image: a992d22d-fbb8-49a8-9282-46e9d75a7fa1
+        min-ready: 1
+        max-servers: 2
