--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -40,6 +40,7 @@ providers:
     pools:
       - name: main
         max-servers: 2
+        flavor-name: m1.small
         networks:
           - zuul-net
         labels:
