--- a/nodepool/runC/customize.yaml
+++ b/nodepool/runC/customize.yaml
@@ -1,5 +1,6 @@
 ---
 - include_tasks: debian-rootfs.yaml
+- include_tasks: debian-buster-rootfs.yaml
 
 # Tasks in that files are executed on the hypervisor-oci node by the config-update
 #- include_tasks: _linters-packages.yaml
