--- a/nodepool/runC/debian-buster-rootfs.yaml
+++ b/nodepool/runC/debian-buster-rootfs.yaml
@@ -21,6 +21,7 @@
     {{ bwrap_command }} /bin/bash -lc "apt-get install -y openssh-server rsync iproute git python-pip python3-pip traceroute libpq-dev python2.7 libpython2.7-dev python-pkg-resources python3.5 libpython3.5-dev python3-pkg-resources"
     {{ bwrap_command }} /bin/bash -lc "ln -sf /usr/bin/python2.7 /usr/bin/python2"
     {{ bwrap_command }} /bin/bash -lc "pip3 install tox"
+    {{ bwrap_command }} /bin/bash -lc "mkdir -p /run/sshd"
     {{ bwrap_command }} /bin/bash -lc "ln -sf /usr/sbin/sshd /sbin/sshd"
     rm -Rf {{ target_dir }}-cache
   args:
