--- a/nodepool/runc_debian.yaml
+++ b/nodepool/runc_debian.yaml
@@ -1,7 +1,7 @@
 # This file is managed by sfconfig, do not edit manually
 
 labels:
-  - name: runc-debian
+  - name: runc-debian-stretch
     min-ready: 1
   - name: runc-debian-buster
     min-ready: 1
@@ -13,7 +13,7 @@ providers:
       - name: managesf.zuul.wazo.community
         max-servers: 10
         labels:
-          - name: runc-debian
+          - name: runc-debian-stretch
             username: zuul-worker
             path: /srv/stretch
           - name: runc-debian-buster
