--- a/zuul.d/_jobs-base.yaml
+++ b/zuul.d/_jobs-base.yaml
@@ -8,7 +8,7 @@
     post-run:
       - playbooks/base/post.yaml
     roles:
-      - zuul: sf-jobs
+      - zuul: wazo-pbx/sf-jobs
       - zuul: zuul-jobs
     timeout: 1800
     attempts: 3
@@ -28,7 +28,7 @@
     parent: base
     final: true
     allowed-projects:
-      - config
+      - wazo-pbx/sf-config
     description: Validate the config repo.
     run: playbooks/config/check.yaml
     post-run: playbooks/config/check-fetch-artifacts.yaml
@@ -46,7 +46,7 @@
     parent: base
     final: true
     allowed-projects:
-      - config
+      - wazo-pbx/sf-config
     description: Deploy config repo update.
     run: playbooks/config/update.yaml
     secrets:
@@ -56,7 +56,7 @@
       nodes: []
 
 - project:
-    name: config
+    name: wazo-pbx/sf-config
     check:
       jobs:
         - config-check
@@ -78,7 +78,7 @@
 
 
 - project:
-    name: sf-jobs
+    name: wazo-pbx/sf-jobs
     check:
       jobs:
         - linters
