Add script to generate resources.yaml and configure github

--- a/resources/resources.yaml
+++ b/resources/resources.yaml
@@ -18,5 +18,206 @@ resources:
       description: "Wazo Platform"
       connection: github.com
       source-repositories:
+        - wazo-pbx/wazo-doc
+        - wazo-pbx/ari-py
+        - wazo-pbx/asterisk
+        - wazo-pbx/asterisk-moh-opsound
+        - wazo-pbx/bntools
+        - wazo-pbx/chan-test
+        - wazo-pbx/dahdi-linux
+        - wazo-pbx/dahdi-tools
+        - wazo-pbx/debian-add-archive
+        - wazo-pbx/debian-installer
+        - wazo-pbx/debian-pxelinux
+        - wazo-pbx/debian-repo-archive
+        - wazo-pbx/debian-repo-main
+        - wazo-pbx/kvm
+        - wazo-pbx/libpri
+        - wazo-pbx/lordboard
+        - wazo-pbx/pylinphonelib
+        - wazo-pbx/sccp-client
+        - wazo-pbx/sccpp
+        - wazo-pbx/sphinx-git
+        - wazo-pbx/xgong
+        - wazo-pbx/wazo-platform
+        - wazo-pbx/wazo-acceptance
+        - wazo-pbx/xivo-acceptance-server
+        - wazo-pbx/xivo-agentd
+        - wazo-pbx/xivo-agentd-cli
+        - wazo-pbx/xivo-agentd-client
+        - wazo-pbx/xivo-agid
+        - wazo-pbx/xivo-amid
+        - wazo-pbx/xivo-amid-client
+        - wazo-pbx/wazo-auth
+        - wazo-pbx/xivo-auth-client
+        - wazo-pbx/wazo-auth-example-backend
+        - wazo-pbx/xivo-auth-keys
+        - wazo-pbx/xivo-backup
+        - wazo-pbx/xivo-benchmark
+        - wazo-pbx/xivo-blog
+        - wazo-pbx/xivo-build-tools
+        - wazo-pbx/xivo-bus
+        - wazo-pbx/wazo-call-logd
+        - wazo-pbx/xivo-certs
+        - wazo-pbx/xivo-ci
+        - wazo-pbx/wazo-client-qt
+        - wazo-pbx/wazo-confd
+        - wazo-pbx/xivo-confd-client
+        - wazo-pbx/xivo-confgend
+        - wazo-pbx/xivo-confgend-client
+        - wazo-pbx/xivo-config
+        - wazo-pbx/xivo-consul-cli-packaging
+        - wazo-pbx/xivo-consul-packaging
+        - wazo-pbx/xivo-consul-replicate-packaging
+        - wazo-pbx/xivo-consul-template-packaging
+        - wazo-pbx/xivo-ctid
+        - wazo-pbx/xivo-ctid-client
+        - wazo-pbx/wazo-calld
+        - wazo-pbx/wazo-calld-client
+        - wazo-pbx/xivo-dao
+        - wazo-pbx/xivo-dbms
+        - wazo-pbx/xivo-dev-ssh-pubkeys
+        - wazo-pbx/wazo-dird
+        - wazo-pbx/wazo-dird-phoned
+        - wazo-pbx/xivo-dist
+        - wazo-pbx/xivo-dxtora
+        - wazo-pbx/xivo-dxtorc
+        - wazo-pbx/xivo-experimental
+        - wazo-pbx/xivo-fetchfw
+        - wazo-pbx/xivo-python-flask-cors-packaging
+        - wazo-pbx/xivo-install-cd
+        - wazo-pbx/xivo-lib-python
+        - wazo-pbx/xivo-lib-rest-client
+        - wazo-pbx/wazo-libsccp
+        - wazo-pbx/xivo-load-monitor
+        - wazo-pbx/xivo-load-tester
+        - wazo-pbx/xivo-manage-db
+        - wazo-pbx/xivo-migration-scripts
+        - wazo-pbx/xivo-monitoring
+        - wazo-pbx/xivo-nginx
+        - wazo-pbx/wazo-notebook
+        - wazo-pbx/xivo-pjsip
+        - wazo-pbx/xivo-presentations
+        - wazo-pbx/xivo-provd-cli
+        - wazo-pbx/xivo-provd-client
+        - wazo-pbx/xivo-provd-plugins
+        - wazo-pbx/xivo-provisioning
+        - wazo-pbx/xivo-purge-db
+        - wazo-pbx/wazo-python-asterisk-ari-packaging
+        - wazo-pbx/xivo-python-asynqp-packaging
+        - wazo-pbx/xivo-python-celery-packaging
+        - wazo-pbx/wazo-python-cherrypy3-packaging
+        - wazo-pbx/xivo-python-consul-packaging
+        - wazo-pbx/xivo-python-flask-menu-packaging
+        - wazo-pbx/xivo-python-flask-wtf-packaging
+        - wazo-pbx/wazo-python-marshmallow-packaging
+        - wazo-pbx/wazo-python-swaggerpy-packaging
+        - wazo-pbx/xivo-python-websockets-packaging
+        - wazo-pbx/wazo-python-wsaccel-packaging
+        - wazo-pbx/xivo-res-freeze-check
+        - wazo-pbx/wazo-service
+        - wazo-pbx/xivo-sounds
+        - wazo-pbx/xivo-stat
+        - wazo-pbx/xivo-swagger-doc
+        - wazo-pbx/xivo-sync
+        - wazo-pbx/xivo-sysconfd
+        - wazo-pbx/xivo-test-helpers
+        - wazo-pbx/xivo-tools
+        - wazo-pbx/xivo-upgrade
+        - wazo-pbx/xivo-utils
+        - wazo-pbx/xivo-web-interface
+        - wazo-pbx/wazo-websocketd
+        - wazo-pbx/xivo-ws
+        - wazo-pbx/wazo-pbx.github.io
+        - wazo-pbx/xivo-keyring
+        - wazo-pbx/wazo-admin-ui
+        - wazo-pbx/wazo-python-flask-classful-packaging
+        - wazo-pbx/wazo-python-flask-login-packaging
+        - wazo-pbx/wazo-uuid
+        - wazo-pbx/wazo-python-flask-session-packaging
+        - wazo-pbx/wazo-admin-ui-switchboard
+        - wazo-pbx/wazo-admin-ui-conference
+        - wazo-pbx/wazo-admin-ui-parking-lot
+        - wazo-pbx/wazo-admin-ui-voicemail
+        - wazo-pbx/wazo-call-logd-client
+        - wazo-pbx/wazo-admin-ui-paging
+        - wazo-pbx/wazo-admin-ui-user
+        - wazo-pbx/wazo-admin-ui-moh
+        - wazo-pbx/wazo-plugind
+        - wazo-pbx/wazo-admin-ui-group
+        - wazo-pbx/wazo-admin-ui-incall
+        - wazo-pbx/wazo-admin-ui-outcall
+        - wazo-pbx/wazo-admin-ui-ivr
+        - wazo-pbx/wazo-admin-ui-trunk
+        - wazo-pbx/wazo-admin-ui-context
+        - wazo-pbx/asterisk-lab
+        - wazo-pbx/wazo-admin-ui-device
+        - wazo-pbx/wazo-admin-ui-extension
+        - wazo-pbx/wazo-admin-ui-cdr
+        - wazo-pbx/wazo-admin-ui-market
+        - wazo-pbx/wazo-plugind-client
+        - wazo-pbx/wazo-admin-ui-entity
+        - wazo-pbx/wazo-plugind-cli
+        - wazo-pbx/wazo-python-cheroot-packaging
+        - wazo-pbx/wazo-python-tempora-packaging
+        - wazo-pbx/wazo-python-portend-packaging
+        - wazo-pbx/wazo-logo
+        - wazo-pbx/wazo-webhookd:
+            zuul/exclude-unprotected-branches: true
+        - wazo-pbx/wazo-webhookd-client
+        - wazo-pbx/wazo-admin-ui-funckey
+        - wazo-pbx/wazo-terraform
+        - wazo-pbx/wazo-market
+        - wazo-pbx/denv
+        - wazo-pbx/wazo-market-client
+        - wazo-pbx/wazo-admin-ui-webhook
+        - wazo-pbx/wazo-res-amqp
+        - wazo-pbx/wazo-res-stasis-amqp
+        - wazo-pbx/mockserver-client-python
+        - wazo-pbx/wazo-dummy-package
+        - wazo-pbx/asterisk-vanilla
+        - wazo-pbx/wazo-doc-api
+        - wazo-pbx/wazo-debug
+        - wazo-pbx/asterisk-debug
+        - wazo-pbx/wazo-auth-cli
+        - wazo-pbx/wazo-sdk
+        - wazo-pbx/wazo-admin-ui-schedule
+        - wazo-pbx/wazo-admin-ui-line
+        - wazo-pbx/wazo-admin-ui-sound
+        - wazo-pbx/wazo-admin-ui-general-settings
+        - wazo-pbx/wazo-admin-ui-call-filter
+        - wazo-pbx/wazo-admin-ui-call-permission
+        - wazo-pbx/wazo-python-anytree-packaging
+        - wazo-pbx/wazo-dird-client
+        - wazo-pbx/wazo-provd-client
+        - wazo-pbx/wazo-js-sdk
+        - wazo-pbx/wazo-react-components
+        - wazo-pbx/debian-repo-router
+        - wazo-pbx/wazo-webrtc-demo
+        - wazo-pbx/wazo-python-jaraco.functools-packaging
+        - wazo-pbx/wazo-react-native-demo
+        - wazo-pbx/wazo-asterisk-config
+        - wazo-pbx/wazo-python-werkzeug-packaging
+        - wazo-pbx/wazo-python-ldap-packaging
+        - wazo-pbx/wazo-python-pyfcm-packaging
+        - wazo-pbx/wazo-websocketd-client
+        - wazo-pbx/wazo-setupd
+        - wazo-pbx/wazo-setupd-client
+        - wazo-pbx/wazo-auth-keys
+        - wazo-pbx/wazo-libsrtp-packaging
+        - wazo-pbx/wazo-chatd
+        - wazo-pbx/wazo-chatd-client
+        - wazo-pbx/frontend-hackathon-emergency
+        - wazo-pbx/wazo-python-pyapns2-packaging
+        - wazo-pbx/wazo-python-sqlalchemy-continuum-packaging
+        - wazo-pbx/wazo-python-hyper-packaging
+        - wazo-pbx/wazo-libtestlink
+        - wazo-pbx/wazo-auth-client
+        - wazo-pbx/wazo-doc-ng
+        - wazo-pbx/wazo-doc-tools
         - wazo-pbx/test-repo
-        - wazo-pbx/wazo-webhookd
+        - wazo-pbx/wazo-confd-client
+        - wazo-pbx/sf-config:
+            zuul/exclude-unprotected-branches: true
+        - wazo-pbx/sf-jobs:
+            zuul/exclude-unprotected-branches: true
