fix base job to have the runc-debian-buster label

--- a/zuul.d/_jobs-base.yaml
+++ b/zuul.d/_jobs-base.yaml
@@ -17,7 +17,7 @@
     nodeset:
       nodes:
         - name: container
-          label: runc-debian
+          label: runc-debian-buster
 
 - semaphore:
     name: semaphore-config-update
